--- a/trunk/VIENNAAddIn/upcc3/Wizards/ImporterWizard.xaml
+++ b/trunk/VIENNAAddIn/upcc3/Wizards/ImporterWizard.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.ImporterWizard"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Height="410" Width="516">
-    <Grid Height="356" Width="492">
+    Height="410" Width="516" WindowStyle="SingleBorderWindow" ShowInTaskbar="False" ResizeMode="NoResize" Title="XML Schema Importer Wizard">
+    <Grid Height="356" Width="492" Background="#FFD4D0C8">
         <Grid.RowDefinitions>
             <RowDefinition Height="256*" />
             <RowDefinition Height="100*" />
@@ -38,10 +38,10 @@
                 </TabItem.Content>
             </TabItem>
         </TabControl>
-        <Button Height="23" Name="buttonClose" Width="75" HorizontalAlignment="Right" Margin="0,0,66,10" VerticalAlignment="Bottom" Grid.Row="1">_Close</Button>
-        <Button Height="23" Name="buttonImport" Margin="52,0,0,10" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="175" Grid.Row="1">_Import XML Schemas</Button>
-        <RichTextBox Name="richtextStatus" Margin="52,0,66,69" Height="73" VerticalAlignment="Bottom" Grid.RowSpan="2" />
-        <ProgressBar Name="progressBar" Margin="52,42,66,45" Grid.Row="1" />
-        <Label Name="label2" Width="121" HorizontalAlignment="Left" Margin="52,0,0,14" Height="0" VerticalAlignment="Bottom">Status</Label>
+        <Button Height="23" Name="buttonClose" Width="75" HorizontalAlignment="Right" Margin="0,0,93,10" VerticalAlignment="Bottom" Grid.Row="1" Click="buttonClose_Click">_Close</Button>
+        <Button Height="23" Name="buttonImport" Margin="69,0,0,10" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="175" Grid.Row="1" Click="buttonImport_Click">_Import XML Schemas</Button>
+        <ProgressBar Name="progressBar" Margin="22,42,0,45" Grid.Row="1" />
+        <Label Name="label2" Width="121" HorizontalAlignment="Left" Margin="22,0,0,25" Height="23" VerticalAlignment="Bottom">Status:</Label>
+        <TextBox Grid.RowSpan="2" Height="66" Margin="22,0,0,62" Name="textboxStatus" VerticalAlignment="Bottom" IsReadOnly="True" IsUndoEnabled="False" TextWrapping="Wrap" Background="#FFD4D0C8" />
     </Grid>
 </Window>
