--- a/VIENNAAddIn/upcc3/Wizards/ImporterWizard.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/ImporterWizard.xaml
@@ -1,47 +1,43 @@
 ﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.ImporterWizard"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Height="410" Width="516" WindowStyle="SingleBorderWindow" ShowInTaskbar="False" ResizeMode="NoResize" Title="XML Schema Importer Wizard">
-    <Grid Height="356" Width="492" Background="#FFD4D0C8">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="256*" />
-            <RowDefinition Height="100*" />
-        </Grid.RowDefinitions>
-        <TabControl Name="tabControl1" TabStripPlacement="Left" Margin="0,0,0,52">
-            <TabItem Name="tabCCTS" Header="CCTS">
-                <TabItem.LayoutTransform>
-                    <RotateTransform Angle="270"></RotateTransform>
-                </TabItem.LayoutTransform>
-                <TabItem.Content>
-                    <Canvas Canvas.Left="0" Canvas.Top="0" Height="209" Name="canvas1" Width="461">
-                        <Button Height="23" Name="buttonBrowseFolders" Width="28" Click="buttonBrowseFolders_Click" Canvas.Left="411" Canvas.Top="43">...</Button>
-                        <TextBox Height="23" Name="textboxRootSchema" Canvas.Left="23" Canvas.Top="43" Width="377" />
-                        <Label Height="24" Name="label1" Canvas.Left="21" Canvas.Top="19" Width="377">Select root XML Schema:</Label>
-                    </Canvas>
-                </TabItem.Content>
-            </TabItem>
+    Height="410" Width="516" WindowStyle="SingleBorderWindow" ShowInTaskbar="False" ResizeMode="CanResize" Title="XML Schema Importer Wizard">
+    <DockPanel Background="#FFD4D0C8">
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5,5,5,5">
+            <Button HorizontalAlignment="Left" Height="23" Name="buttonImport" Width="175" Click="buttonImport_Click">_Import XML Schemas</Button>
+            <Button HorizontalAlignment="Left" Height="23" Name="buttonClose" Width="75" Margin="30,0,0,0" Click="buttonClose_Click">_Close</Button>
+        </StackPanel>
+        <ProgressBar DockPanel.Dock="Bottom" Name="progressBar" Margin="22,5,5,0" Minimum="0" Maximum="100"/>
+        <TextBox DockPanel.Dock="Bottom" Height="66" Margin="22,5,5,0" Name="textboxStatus" IsReadOnly="True" IsUndoEnabled="False" TextWrapping="Wrap" Background="#FFD4D0C8"/>
+        <Label DockPanel.Dock="Bottom" Name="label2" Margin="22,5,5,0" Height="23"  HorizontalAlignment="Left">Status:</Label>
+        <TabControl Name="tabControl1" TabStripPlacement="Left" Margin="5,5,5,0">
             <TabItem Name="tabEbInterface" Header="ebInterface">
                 <TabItem.LayoutTransform>
                     <RotateTransform Angle="270"></RotateTransform>
                 </TabItem.LayoutTransform>
                 <TabItem.Content>
-                    <ScrollViewer Grid.RowSpan="2" Name="scrollViewer1" Height="190" Width="455  " VerticalScrollBarVisibility="Auto">
-                        <Canvas Height="164" Name="gridEbInterface" Width="371">
-                            <Label Height="23" Name="label12" Canvas.Left="-35" Canvas.Top="-14" Margin="13,11,28,0" VerticalAlignment="Top" Width="297">Select ebInterface Schema:</Label>
-                            <Button Height="23" Name="buttonBrowseFolders2" Width="28" Click="buttonBrowseFolders2_Click" Canvas.Left="347" Canvas.Top="-17" HorizontalAlignment="Right" Margin="0,36,26,0" VerticalAlignment="Top">...</Button>
-                            <TextBox Height="23" Name="textboxEbInterfaceSchema" Canvas.Left="-37" Canvas.Top="-17" Margin="16,36,62,0" VerticalAlignment="Top" Width="358" />
-                            <Label Canvas.Left="-35" Canvas.Top="-4" Margin="15,65,26,76" Name="label3" Height="23" Width="290">Select mapping file:</Label>
-                            <Button Canvas.Left="347" Canvas.Top="85" Height="23" HorizontalAlignment="Right" Margin="0,0,26,52" Name="mappingFileB_1" VerticalAlignment="Bottom" Width="28" Click="buttonBrowseFoldersMapping1_Click">...</Button>
-                            <TextBox Canvas.Left="-37" Canvas.Top="85" Height="23" Margin="15,0,62,52" Name="mappingFileT_1" VerticalAlignment="Bottom" TextChanged="textboxSelectMappingFile1_TextChanged" Width="358" />
-                        </Canvas>
-                    </ScrollViewer>
+                    <DockPanel>
+                        <Label DockPanel.Dock="Top" Height="23" Name="label12">Select ebInterface Schema:</Label>
+                        <StackPanel Name="mappedSchemaFileSelectorPanel" DockPanel.Dock="Top" VerticalAlignment="Stretch" Margin="5,0,5,0" />
+                        <Label DockPanel.Dock="Top" Name="label3" Height="23">Select mapping files:</Label>
+                        <Border BorderThickness="1" BorderBrush="Gray" Margin="5,0,5,0">
+                            <ScrollViewer Name="mappingFileSelectorScrollViewer" Margin="5" VerticalAlignment="Stretch" VerticalScrollBarVisibility="Auto">
+                            </ScrollViewer>
+                        </Border>
+                    </DockPanel>
+                </TabItem.Content>
+            </TabItem>
+            <TabItem Name="tabCCTS" Header="CCTS">
+                <TabItem.LayoutTransform>
+                    <RotateTransform Angle="270"></RotateTransform>
+                </TabItem.LayoutTransform>
+                <TabItem.Content>
+                    <StackPanel Width="455" HorizontalAlignment="Left">
+                        <Label Height="23" Name="label1">Select root XML Schema:</Label>
+                        <StackPanel Name="cctsSchemaFileSelectorPanel" Margin="5,0,5,0" />
+                    </StackPanel>
                 </TabItem.Content>
             </TabItem>
         </TabControl>
-        <Button Height="23" Name="buttonClose" Width="75" HorizontalAlignment="Right" Margin="0,0,93,10" VerticalAlignment="Bottom" Grid.Row="1" Click="buttonClose_Click">_Close</Button>
-        <Button Height="23" Name="buttonImport" Margin="69,0,0,10" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="175" Grid.Row="1" Click="buttonImport_Click">_Import XML Schemas</Button>
-        <ProgressBar Name="progressBar" Margin="22,42,0,45" Grid.Row="1" />
-        <Label Name="label2" Width="121" HorizontalAlignment="Left" Margin="22,0,0,25" Height="23" VerticalAlignment="Bottom">Status:</Label>
-        <TextBox Grid.RowSpan="2" Height="66" Margin="22,0,0,62" Name="textboxStatus" VerticalAlignment="Bottom" IsReadOnly="True" IsUndoEnabled="False" TextWrapping="Wrap" Background="#FFD4D0C8" />
-    </Grid>
+    </DockPanel>
 </Window>
