--- a/VIENNAAddIn/upcc3/Wizards/dev/ABIEEditor.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ABIEEditor.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.dev.ABIEEditor"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Height="627" Width="589" WindowStyle="SingleBorderWindow" Background="#FFD4D0C8" ShowInTaskbar="False" ResizeMode="CanResize" Title="ABIE Modeler">
+    Height="627" Width="589" WindowStyle="SingleBorderWindow" Background="#FFD4D0C8" ShowInTaskbar="False" ResizeMode="CanResize" Title="ABIE Editor">
     
     <DockPanel Background="#FFD4D0C8" Margin="2,5,5,5">
         
@@ -47,22 +47,25 @@
                         <UniformGrid Rows="1" Columns="3">
                             <GroupBox Header="BCCs used as BBIEs" Margin="0,0,0,0">
                                 <DockPanel>
-                                    <CheckBox DockPanel.Dock="Bottom" Name="checkboxBCCs" Margin="0,3,0,0" Checked="checkboxBCCs_Checked" Unchecked="checkboxBCCs_Unchecked">Select all BCCs</CheckBox>
-                                    <ListBox Name="checkedlistboxBCCs" Margin="0,3,0,0" SelectionChanged="checkedlistboxBCCs_SelectionChanged"></ListBox>
+                                    <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="20" Margin="0,0,0,0">
+                                        <CheckBox DockPanel.Dock="Top" Name="checkboxBCCs" Margin="0,3,0,0" Checked="checkboxBCCs_Checked" Unchecked="checkboxBCCs_Unchecked">Select all BCCs</CheckBox>
+                                    </StackPanel>
+                                    <ListBox Name="checkedlistboxBCCs" Margin="0,0,0,0" SelectionChanged="checkedlistboxBCCs_SelectionChanged"></ListBox>
                                 </DockPanel>
                             </GroupBox>
                             <GroupBox Header="BBIEs based on BCCs" Margin="-2,0,0,0">
                                 <DockPanel>
-                                    <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Margin="0,3,0,0">
-                                        <Button Name="buttonAddBBIE" Height="20" Width="20" Click="buttonAddBBIE_Click">+</Button>
-                                        <Label>Add another BBIE</Label>
+                                    <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="20" Margin="0,0,0,0">
+                                        <Button Name="buttonAddBBIE" Height="15" Width="15" Click="buttonAddBBIE_Click" FontSize="8">+</Button>
+                                        <Label Margin="0,-2,0,0">Add another BBIE</Label>
                                     </StackPanel>
-                                    <ListBox Name="checkedlistboxBBIEs" Margin="0,3,0,0" SelectionChanged="checkedlistboxBBIEs_SelectionChanged"></ListBox>
+                                    <ListBox Name="checkedlistboxBBIEs" Margin="0,0,0,0" SelectionChanged="checkedlistboxBBIEs_SelectionChanged"></ListBox>
                                 </DockPanel>
                             </GroupBox>
                             <GroupBox Header="BDTs available to typify the BBIEs" Margin="-2,0,0,0">
                                 <DockPanel>
-                                    <ListBox Name="checkedlistboxBDTs" Margin="0,3,0,0" SelectionChanged="checkedlistboxBDTs_SelectionChanged"></ListBox>
+                                    <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="20" Margin="0,0,0,0" />
+                                    <ListBox Name="checkedlistboxBDTs" Margin="0,0,0,0" SelectionChanged="checkedlistboxBDTs_SelectionChanged"></ListBox>
                                 </DockPanel>
                             </GroupBox>
                         </UniformGrid>
