--- a/VIENNAAddIn/upcc3/Wizards/XsdImporterForm.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/XsdImporterForm.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.ImporterWizard"
+﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.XsdImporterForm"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Height="500" Width="516" WindowStyle="SingleBorderWindow" ShowInTaskbar="False" ResizeMode="CanResize" Title="XML Schema Importer Wizard">
