Update issue 91  * Re-implemented IBieLibrary with T4 templates.

--- a/CctsRepository/t4/LibraryInterface.tt
+++ b/CctsRepository/t4/LibraryInterface.tt
@@ -10,7 +10,7 @@
 using System.Collections.Generic;
 using CctsRepository.bLibrary;
 
-namespace CctsRepository.BdtLibrary
+namespace CctsRepository.<#= metaPackage.Name #>
 {
 	/// <summary>
 	/// Interface for CCTS/UPCC <#= metaPackage.Stereotype #>.
